--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-# Object file
-*.o
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# Ada Library Information
-*.ali
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
